<resources>
    <string name="app_name">CheckYourEnglishVocabulary</string>
    <string name="task1active">task1active</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="level1active">level1active</string>
    <string name="level2active">level2active</string>
    <string name="level1complated">level1complated</string>
    <string name="level3active">level3active</string>
    <string name="level2complated">level2complated</string>
    <string name="task1complated">task1complated</string>
    <string name="task2active">task2active</string>
    <string name="level3complated">level3complated</string>
    <string name="task2complated">task2complated</string>
    <string name="task3active">task3active</string>
    <string name="task3complated">task3complated</string>
    <string name="mainpageuyesiz">mainpagebackgroundd</string>
    <string name="level1passive">level1passive</string>
    <string name="level2passive">level2passive</string>
    <string name="level3passive">level3passive</string>
    <string name="task2passive">task2passive</string>
    <string name="task3passive">task3passive</string>
    <string name="compitationbutton">competitionbutton</string>
    <string name="playagainstanuserbutton">playagainstanuserbutton</string>
    <string name="settingsbutton">settingsbutton</string>
    <string name="privacybutton">privacybutton</string>
    <string name="loginbutton">loginbutton</string>
    <string name="registerbutton">registerbutton</string>
    <string name="buycoinbutton1">buycoinbutton1</string>
    <string name="freecoinbutton1">freecoinbutton1</string>
    <string name="logoutbutton">logout</string>
    <string name="yourstatisticbutton">yourstatisticsbutton</string>
    <string name="ranklistbutton">ranklistbutton</string>
    <string name="rulesbutton">rulesbutton</string>
    <string name="log1">You have logged in successfully.</string>
    <string name="log2">Your user name has been registered from an another device. Please try to login from the device which you have registered on.</string>
    <string name="log3">You have incorrectly entered your password</string>
    <string name="log4">Your user name or password was entered inaccurately.</string>
    <string name="log5">Please type all required information completely.</string>
    <string name="yourstatisticbacktomenu">yourstatisticsbacktomenu</string>
    <string name="reg1">This username is used by an another user. Please choose a different username.</string>
    <string name="reg2">You already registered from this device before. Please login.</string>
    <string name="reg3">Your registration has been added successfully, You are redirected to the MainPage.</string>
    <string name="reg4">Please enter a valid email address.</string>
    <string name="reg5">Your registration has been added successfully, You are redirected to the MainPage.</string>
    <string name="reg6">Please type all required information completely.</string>
    <string name="reg7">You already registered from this device before. Please login.</string>
    <string name="buynowbutton">buynowbutton</string>
    <string name="rank1">Your Rank is :</string>
    <string name="rank2">User Detail</string>
    <string name="yourstatisticbackground">yourstatisticsbackground</string>
    <string name="yourstatisticbackgrounduye">yourstatisticbackgrounduye</string>
    <string name="t1l1score">Task1 Level1 Score</string>
    <string name="t1l2score">Task1 Level2 Score</string>
    <string name="t1l3score">Task1 Level3 Score</string>
    <string name="t2l1score">Task2 Level1 Score</string>
    <string name="t2l2score">Task2 Level2 Score</string>
    <string name="t2l3score">Task2 Level3 Score</string>
    <string name="t3l1score">Task3 Level1 Score</string>
    <string name="t3l2score">Task3 Level2 Score</string>
    <string name="t3l3score">Task3 Level3 Score</string>
    <string name="generalscore">General Score</string>
    <string name="yourstats1">Are you sure to reset chosen statistics? It costs 5 coins for this.</string>
    <string name="yourstats2">Are you sure to reset all statistics? It costs 20 coins for this.</string>
    <string name="yourstats3">Warning!</string>
    <string name="yourstats4">There is not enough coin to carry it out!</string>
    <string name="okbutton">Ok</string>
    <string name="no">No</string>
    <string name="resetchosenbutton">resetchosenbutton</string>
    <string name="total_score">Total score</string>
    <string name="total_known_questions">Total known questions</string>
    <string name="total_unknown_questions">Total unknown questions</string>
    <string name="total_skiped_questions">Total skiped questions</string>
    <string name="question">"Question "</string>
    <string name="soruekran1">You ran out of time unfortunately!</string>
    <string name="task">"Task "</string>
    <string name="level">" Level "</string>
    <string name="hasbencomplated">" has been complated"</string>
    <string name="soruekran2">If you want to play all the levels and save your progress please register.</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="yestext">Yes</string>
    <string name="nextquestionbutton">nextquestionbuttonn</string>
    <string name="sorubutonyazi">sorubutonyazi</string>
    <string name="sorubutonyazi2">sorubutonyazi2</string>
    <string name="reportthequestionbutton">reportthequestion</string>
    <string name="backtomenutosavebutton">backtomenutosave</string>
    <string name="t1l1">Task1 Level1</string>
    <string name="t1l2">Task1 Level2</string>
    <string name="t1l3">Task1 Level3</string>
    <string name="t2l1">Task2 Level1</string>
    <string name="t2l2">Task2 Level2</string>
    <string name="t2l3">Task2 Level3</string>
    <string name="t3l1">Task3 Level1</string>
    <string name="t3l2">Task3 Level2</string>
    <string name="t3l3">Task3 Level3</string>
    <string name="mainyazi1">You have to register or login to be able to use this option!</string>
    <string name="mainyazi2">Are you sure you want to close the application?</string>
    <string name="the_rules_of_the_application">The rules of the application:</string>
    <string name="first_and_the_most_important_rule_is_it_to_be_an_obligation_to_start_from_first_task_first_level_you_will_be_able_to_active_other_levels_by_completing_every_levels_gradually_such_as_it_will_be_probable_to_play_quot_task1_level2_quot_after_completing_quot_task1_level1_quot_this_rule_is_available_for_registered_users">- First and the most important rule is it to be an obligation to start from first task-first level. You will be able to active other levels by completing every levels gradually. Such as it will be probable to play \"Task1- Level2 \" after completing \"Task1 - Level1\" ( This rule is available for registered users.)</string>
    <string name="registration_is_free_for_now_registering_takes_only_a_few_seconds_as_there_is_no_obligation_for_confirmation_you_can_start_playing_after_registering_immediately">- Registration is free for now! Registering takes only a few seconds as there is no obligation for confirmation. You can start playing after registering immediately!</string>
    <string name="there_is_a_great_advantage_by_registration_option_with_this_option_you_will_be_able_to_protect_all_your_progress_even_though_you_remove_your_application_from_your_device">- There is a great advantage by registration option. With this option you will be able to protect all your progress even though you remove your application from your device!</string>
    <string name="if_you_don_apos_t_register_your_progress_can_not_be_saved_unfortunately_if_you_start_playing_apos_task1_level1_apos_without_registering_after_completion_your_progress_won_apos_t_be_transferred_even_though_you_decide_to_register_so_before_starting_to_play_you_must_register_to_protect_all_your_progress">- If you don\'t register your progress can not be saved unfortunately. If you start playing \'Task1-Level1\' without registering, after completion, your progress won\'t be transferred even though you decide to register. So before starting to play, you must register to protect all your progress.</string>
    <string name="there_are_totally_100_questions_for_every_level_the_maximum_point_which_you_can_obtain_is_quot_4500_quot_for_now">- There are totally 100 questions for every level. The maximum point which you can obtain is \"4500\" for now.</string>
    <string name="there_is_20_minutes_countdown_to_answer_per_question_any_question_which_won_apos_t_be_answered_on_the_time_will_be_calculated_as_an_unknown_question_so_that_your_point_will_decrease_2_points">- There is 20 minutes countdown to answer per question. Any question which won\'t be answered on the time will be calculated as an unknown question, so that your point will decrease 2 points.</string>
    <string name="per_known_question_will_add_5_points_to_the_score_for_every_level">- Per known question will add 5 points to the score for every level .</string>
    <string name="per_unknown_question_will_remove_2_points_from_the_score_for_every_level">- Per unknown question will remove -2 points from the score for every level.</string>
    <string name="per_skipped_question_will_be_ineffective_for_the_general_score_that_means_skipped_question_won_apos_t_add_or_remove_any_point">- Per skipped question will be ineffective for the general score. (That means skipped question won\'t add or remove any point.</string>
    <string name="questions_will_gradually_get_harder_from_first_level_to_last_level">- Questions will gradually get harder from first level to last level.</string>
    <string name="after_using_apos_40_joker_apos_right_you_can_also_skip_the_question">- After using \'%40 Joker\' right, you can also skip the question.</string>
    <string name="using_apos_40_joker_apos_right_will_also_stop_the_timer_in_addition_to_eliminate_2_false_answers">- Using \'%40 Joker\' right will also stop the timer in addition to eliminate 2 false answers!</string>
    <string name="you_can_see_the_right_answer_after_skipping_the_question">- You can see the right answer after skipping the question.</string>
    <string name="report_the_question_button_will_be_active_after_answering_or_skipping_the_question_during_countdown_you_can_not_use_this_button">- Report the question button will be active after answering or skipping the question. During countdown, you can not use this button.</string>
    <string name="to_start_by_registering">To start by registering:</string>
    <string name="you_can_play_all_levels">- You can play all levels.</string>
    <string name="your_development_will_be_recorded_automatically">- Your development will be recorded automatically.</string>
    <string name="you_will_be_able_to_skip_the_question_which_you_don_apos_t_want_to_answer">- You will be able to skip the question which you don\'t want to answer.</string>
    <string name="the_joker_button_will_be_available_to_be_able_to_use">- The Joker button will be available to be able to use.</string>
    <string name="you_will_be_able_to_report_the_question_you_want">- You will be able to report the question you want.</string>
    <string name="_50_coins_2_dollars">50 coins : 2 dollars</string>
    <string name="_100_coins_3_dollars">100 coins : 3 dollars</string>
    <string name="_200_coins_5_dollars">200 coins 5 dollars</string>
    <string name="_250_coins_6_dollars">250 coins : 6 dollars</string>
    <string name="_500_coins_10_dollars">500 coins : 10 dollars</string>
    <string name="_1000_coins_15_dollars">1000 coins : 15 dollars</string>
    <string name="langulage">Language</string>
    <string name="Questions">Questions</string>
    <string name="forspendingtokens">(For spendings tokens)</string>
    <string name="Sound">Sound</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
</resources>