<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.englishapps.com.checkyourenglishvocabulary.settingss"
    android:background="@drawable/settingsbackground"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".05"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="0.11"
            android:layout_height="0dp"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".6">

                    <TextView
                        android:text="@string/langulage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView48"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:textSize="24sp"
                        android:textStyle="normal|bold"
                        android:typeface="normal"
                        android:textColor="@color/kahve" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <RadioButton
                        android:text="Tr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_turkish"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="En"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_english"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView66"
                        android:typeface="normal"
                        android:textColor="@color/kahve"
                        android:textStyle="normal|bold"
                        android:textSize="24sp"
                        android:text="@string/Questions" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView49"
                        android:typeface="normal"
                        android:textColor="@color/kahve"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="@string/forspendingtokens" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4">

                    <RadioButton
                        android:text="@string/On"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/questions_on"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/Off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/questions_off"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".34">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <TextView
                        android:text="@string/Sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView65"
                        android:layout_weight="1"
                        android:textColor="@color/kahve"
                        android:textSize="24sp"
                        android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4">

                    <RadioButton
                        android:text="@string/On"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Sound_on"
                        android:layout_weight="1" />

                    <RadioButton
                        android:text="@string/Off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Sound_off"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".13"
            android:id="@+id/settings_save_linear"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum=".1"
            android:layout_weight="0.21"
            android:id="@+id/settings_back_linear"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".05"></LinearLayout>

</LinearLayout>
