<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.englishapps.com.checkyourenglishvocabulary.BuyCoin"
    android:id="@+id/buycoinlinear"
    android:weightSum="1"
    android:baselineAligned="false"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:baselineAligned="false" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".9" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/buycoinusernametxt"
                    android:enabled="false"
                    android:editable="false"
                    android:allowUndo="false"
                    android:autoText="false"
                    android:text="username"
                    android:background="@android:color/transparent"
                    android:textColor="#ff0000"
                    android:layout_weight=".7"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:padding="0dp"
                    android:textIsSelectable="false"
                    android:inputType="none"
                    android:textSize="18sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:id="@+id/linearLayout2"
            android:baselineAligned="false" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15"
                android:padding="0dp"
                android:id="@+id/linearLayout"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:layout_weight="0.93"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.0002"
                    android:padding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="0"
                    android:id="@+id/buycoingoldtxt"
                    android:layout_weight=".001"
                    android:padding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/buycoinortalinear"
        android:layout_weight="0.67">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50_coins_2_dollars"
                    android:id="@+id/ellicointxt"
                    android:checked="false"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_coins_3_dollars"
                    android:id="@+id/yuzcointxt"
                    android:checked="false"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_200_coins_5_dollars"
                    android:id="@+id/ikiyuzcointxt"
                    android:checked="false"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_250_coins_6_dollars"
                    android:id="@+id/ikiyuzellicointxt"
                    android:checked="false"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_500_coins_10_dollars"
                    android:id="@+id/besyuzcointxt"
                    android:checked="false"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000_coins_15_dollars"
                    android:id="@+id/bincointxt"
                    android:checked="false"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:id="@+id/buynowlayout">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/buycoinaltlinear"
        android:layout_weight="0.21">

    </LinearLayout>

</LinearLayout>
